# espCam_imageAnalysis

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_TESTE.md  SECURITY.md  SUPPORT.md  enchentes_data_teste.db  monitor_mqtt.py  mqtt_config.txt  requirements.txt  sdkconfig  sdkconfig.defaults  test_sniffer_validation.py  validar_dados.py
.github/: dependabot.yml  pull_request_template.md
data/: README.md
docs/: API_MQTT.md  CENARIOS_TESTE_CIENTIFICOS.md  DOCUMENTACAO_TECNICA.md  ESP32-CAM_README.md  INSTALACAO.md  OTIMIZACOES_8MB_PSRAM.md  PROBLEMA_IMAGENS_ESVERDEADAS.md  PSRAM_LIMITACAO_TECNICA.md  README.md  camera_troubleshooting.md  faq.md  hardware_guide.md  ic_propose.tex  ieee_article.tex  installation.md  memory_optimization.md  mqtt_api.md  psram_limitations.md  technical_guide.md  template.tex  testing_guide.md
esp32/: README.md  flash_linux.sh  sdkconfig  sdkconfig.defaults
esp32/main/: CMakeLists.txt  config.h  main.c
esp32/main/model/: advanced_analysis.c  chip_info.c  compare.c  compare.h  image_processing.c  image_processing.h  init_hw.c  init_hw.h  init_net.c  init_net.h  model.c  model.h  mqtt_send.c  mqtt_send.h  sensor.c  sensor.h  wifi_sniffer.c
logs/: README.md
main/: CMakeLists.txt  main.c
scripts/: README.md  README_SCRIPTS.md  backup_readmes.sh  cleanup_duplicates.py  copy_images_to_spiffs.py  esp32cam_manager.sh  find_mosquitto_ip.sh  generate_report.py  run_scientific_tests.sh  scientific_report.py  setup.sh  switch_version.sh  test_session_manager.py  (+1 more)
(+53 files in other folders)
